--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="section--img1">
         <div class="heading-container">
             <h2 class="heading-container__heading">
-                Clarusway FullStack Team
+                FullStack Team
             </h2>
         </div>
     </section>
